tutorials/ca-service-istio-gateway/07-sample-app/gateway.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello # kpt-set: ${gateway-name}
  namespace: istio-ingress # kpt-set: ${gateway-namespace}
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: # kpt-set: ${virtual-service-namespace-host}
    - sample-app/hello.example.com # kpt-set: ${namespace}/${host}
    port:
      name: https-hello
      number: 443
      protocol: HTTPS
    tls:
      credentialName: hello-example-com-credential # kpt-set: ${certificate-secret}
      mode: SIMPLE
