tutorials/ca-service-istio-gateway/07-sample-app/virtual-service.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello
  namespace: sample-app # kpt-set: ${namespace}
spec:
  hosts:
  - hello.example.com # kpt-set: ${host}
  gateways:
  - istio-ingress/hello # kpt-set: ${gateway-namespace}/${gateway-name}
  http:
  - route:
    - destination:
        host: hello # kpt-set: ${service-name}
        port:
          number: 8080 # kpt-set: ${port}
